--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Clone Repository') {
             steps {
                 // Clonar o repositório onde está o arquivo docker-compose.yml
-                git 'https://seu-repositorio-git-url.git'
+                git 'https://github.com/lucasycosta/vonk-ia.git'
             }
         }
         
