--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,18 +2,11 @@ pipeline {
     agent any
 
     stages {
-        stage('Clone Repository') {
-            steps {
-                // Clonar o repositório onde está o arquivo docker-compose.yml
-                git 'https://github.com/lucasycosta/vonk-ia.git'
-            }
-        }
-        
         stage('Build and Run Docker Compose') {
             steps {
                 script {
                     // Construir e rodar o docker-compose
-                    sh 'docker-compose up -d' // Construir e rodar no modo detached
+                    bat 'docker-compose up -d' // Construir e rodar no modo detached
                 }
             }
         }
